modificações nas telas de dentista

--- a/src/main/resources/templates/agendamento.html
+++ b/src/main/resources/templates/agendamento.html
@@ -104,7 +104,7 @@
         </div>
         <div class="mb-3">
             <button class="btn btn-primary" type="submit">Cadastrar Agendamento</button>
-            <button class="btn btn-primary" type="submit">Cancelar</button>
+            <a class="btn btn-primary" href="/">Cancelar</a>
         </div>
     </form>
 </div>
