--- a/src/main/resources/templates/cadastroDentista.html
+++ b/src/main/resources/templates/cadastroDentista.html
@@ -66,12 +66,12 @@
                                         </div>
                                         <div>
                                             <label class="form-label" for="genero">Gênero:</label>
-                                            <select class="form-control" id="genero" th:field="*{pessoaDTO.generoDTO.id}">
+                                            <select class="form-control" id="genero" th:field="*{pessoaDTO.idGenero}">
                                                 <option value="-1">-- Selecione a opção --</option>
                                                 <option th:each="genero : ${generos}" th:text="${genero.getDescricao()}"
                                                         th:value="${genero.ordinal()}"></option>
                                             </select>
-                                            <div th:replace="~{fragments :: listaErros('pessoaDTO.generoDTO.id')}"></div>
+                                            <div th:replace="~{fragments :: listaErros('pessoaDTO.idGenero')}"></div>
                                         </div>
                                         <div>
                                             <label class="form-label" for="senha">Senha:</label>
