--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -2,4 +2,17 @@
     <ul th:fragment="listaErros(campo)" th:if="${#fields.hasErrors(campo)}">
         <li class="error" th:each="err : ${#fields.errors(campo)}" th:text="${err}"/>
     </ul>
+
+    <head th:fragment="header(titulo)">
+        <meta charset="UTF-8"/>
+        <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+              name="viewport"/>
+        <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
+        <title th:text="${titulo}"></title>
+
+        <link th:href="@{/css/tailwind.css}" rel="stylesheet" />
+<!--        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
+<!--        <link href="https://code.getmdl.io/1.3.0/material.blue-deep_purple.min.css" rel="stylesheet"/>-->
+<!--        <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>-->
+    </head>
 </div>
