--- a/src/main/resources/templates/indexAdmin.html
+++ b/src/main/resources/templates/indexAdmin.html
@@ -1,23 +1,37 @@
 <!doctype html>
-<html lang="pt_BR">
-<head>
-    <meta charset="UTF-8">
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport">
-    <meta content="ie=edge" http-equiv="X-UA-Compatible">
-    <title>Dashboard</title>
-
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-</head>
+<html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
+<head th:replace="~{fragments :: header('Dashboard')}"></head>
 <body>
-<div id="central">
-<a href="/logout">Sair</a>
 
-<h1>Página Admin</h1>
+<div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+    <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+            <span class="mdl-layout-title">Página Admin</span>
 
-<a href="/cadastro/dentista">Cadastro de Dentista</a>
+            <div class="mdl-layout-spacer"></div>
+
+            <nav class="mdl-navigation">
+                <a class="mdl-navigation__link" href="/logout">Sair</a>
+            </nav>
+        </div>
+    </header>
+    <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">Página Admin</span>
+        <nav class="mdl-navigation">
+            <a class="mdl-navigation__link" href="">Link</a>
+            <a class="mdl-navigation__link" href="">Link</a>
+            <a class="mdl-navigation__link" href="">Link</a>
+
+        </nav>
+    </div>
+    <main class="mdl-layout__content">
+        <div class="page-content">
+            <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" href="/cadastro/dentista">
+                Cadastro de Dentista
+            </a>
+        </div>
+    </main>
 </div>
+
 </body>
 </html>
