--- a/src/main/resources/templates/cadastroDentista.html
+++ b/src/main/resources/templates/cadastroDentista.html
@@ -1,113 +1,192 @@
 <!DOCTYPE html>
 <html lang="pt_BR" xmlns:th="http://www.w3.org/1999/xhtml">
-<head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-          name="viewport"/>
-    <meta content="ie=edge" http-equiv="X-UA-Compatible"/>
+    <head th:replace="~{fragments :: header('Cadastro de Dentista')}"></head>
 
-    <link href="css/global.css" rel="stylesheet"/>
-    <link href="css/cadastro.css" rel="stylesheet"/>
+    <body class="bg-slate-50">
+        <h1 class="font-bold text-3xl text-center mt-10">
+            Cadastro de Dentista
+        </h1>
 
-    <link href="https://fonts.googleapis.com" rel="preconnect"/>
-    <link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet"/>
+        <div class="flex flex-col items-center mt-24 justify-center">
+            <div class="w-full max-w-lg">
+                <form
+                    action="/cadastro/dentista"
+                    enctype="utf8"
+                    method="POST"
+                    th:object="${cadastroDentistaDTO}"
+                    class="bg-white shadow-md px-8 pt-6 pb-8 rounded w-full max-w-lg flex flex-col"
+                >
+                    <h2 class="text-gray-700 font-bold mt-5 mb-1">
+                        Informações gerais
+                    </h2>
+                    <div>
+                        <label
+                            class="font-medium text-gray-700 block"
+                            for="nome"
+                        >
+                            Nome completo:
+                        </label>
+                        <input
+                            id="nome"
+                            class="font-medium bg-slate-100 shadow-inner rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                            placeholder="João da Silva"
+                            th:field="*{pessoaDTO.nome}"
+                            type="text"
+                        />
+                        <div
+                            th:replace="~{fragments :: listaErros('pessoaDTO.nome')}"
+                        ></div>
+                    </div>
+                    <div class="flex mb-4 -mx-2">
+                        <div class="w-1/2 px-2">
+                            <label
+                                class="font-medium text-gray-700 block"
+                                for="cpf"
+                            >
+                                CPF:
+                            </label>
+                            <input
+                                id="cpf"
+                                class="font-medium bg-slate-100 shadow-inner rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                placeholder="123.456.789-09"
+                                th:field="*{pessoaDTO.cpf}"
+                                type="text"
+                            />
+                            <div
+                                th:replace="~{fragments :: listaErros('pessoaDTO.cpf')}"
+                            ></div>
+                        </div>
 
-    <title>Cadastro de Paciente</title>
-
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" rel="stylesheet">
-</head>
-
-<body>
-<header>
-</header>
-<section class="h-100 gradient-form">
-    <div class="container py-5 h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-            <div class="col-xl-8">
-                <div class="card rounded-3 text-black">
-                    <div class="row g-0">
-                        <div class="col-lg-12">
-                            <div class="card-header">
-                                <div class="text-center"> <h1>Cadastro de Dentista</h1></div>
-                                <a href="/">Voltar</a>
-                            </div>
-                            <div class="card-body">
-                                <form action="/cadastro/dentista" enctype="utf8" method="POST"
-                                      th:object="${cadastroDentistaDTO}">
-                                    <div class="form-section">
-                                        <h2>Informações gerais</h2>
-                                        <div>
-                                            <label class="form-label" for="nome">Nome completo:</label>
-                                            <input class="form-control" id="nome" placeholder="João da Silva" th:field="*{pessoaDTO.nome}"
-                                                   type="text"/>
-                                            <div th:replace="~{fragments :: listaErros('pessoaDTO.nome')}"></div>
-                                        </div>
-                                        <div>
-                                            <label class="form-label" for="cpf">CPF:</label>
-                                            <input class="form-control" id="cpf" placeholder="123.456.789-09" th:field="*{pessoaDTO.cpf}"
-                                                   type="text"/>
-                                            <div th:replace="~{fragments :: listaErros('pessoaDTO.cpf')}"></div>
-                                        </div>
-                                        <div>
-                                            <label class="form-label" for="identidade">RG:</label>
-                                            <input class="form-control" id="identidade" placeholder="123456789" th:field="*{pessoaDTO.rg}"
-                                                   type="text"/>
-                                            <div th:replace="~{fragments :: listaErros('pessoaDTO.rg')}"></div>
-                                        </div>
-                                        <div>
-                                            <label class="form-label" for="dataNascimento">Data de Nascimento:</label>
-                                            <input class="form-control" id="dataNascimento" placeholder="01/01/1970"
-                                                   th:field="*{pessoaDTO.dataNascimento}"
-                                                   type="date"/>
-                                            <div th:replace="~{fragments :: listaErros('pessoaDTO.dataNascimento')}"></div>
-                                        </div>
-                                        <div>
-                                            <label class="form-label" for="genero">Gênero:</label>
-                                            <select class="form-control" id="genero" th:field="*{pessoaDTO.idGenero}">
-                                                <option value="-1">-- Selecione a opção --</option>
-                                                <option th:each="genero : ${generos}" th:text="${genero.getDescricao()}"
-                                                        th:value="${genero.ordinal()}"></option>
-                                            </select>
-                                            <div th:replace="~{fragments :: listaErros('pessoaDTO.idGenero')}"></div>
-                                        </div>
-                                        <div>
-                                            <label class="form-label" for="senha">Senha:</label>
-                                            <input class="form-control" id="senha" placeholder="Senha secreta" th:field="*{senha}"
-                                                   type="password"/>
-                                            <div th:replace="~{fragments :: listaErros('senha')}"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-section">
-                                        <h2>Contato</h2>
-                                        <div>
-                                            <label class="form-label" for="celular">Celular:</label>
-                                            <input class="form-control" id="celular" placeholder="(84) 9 1234-5678"
-                                                   th:field="*{pessoaDTO.celular}" type="tel"/>
-                                            <div th:replace="~{fragments :: listaErros('pessoaDTO.celular')}"></div>
-                                        </div>
-                                        <div>
-                                            <label class="form-label" for="email">E-mail:</label>
-                                            <input class="form-control" id="email" placeholder="joao.silva@email.com"
-                                                   th:field="*{pessoaDTO.email}" type="email"/>
-                                            <div th:replace="~{fragments :: listaErros('pessoaDTO.email')}"></div>
-                                        </div>
-                                    </div>
-
-                                    <div class="form-section mt-3">
-                                        <button class="btn btn-primary btn-block mb-4" type="submit">Registrar</button>
-                                    </div>
-                                </form>
-                            </div>
+                        <div class="w-1/2 px-2">
+                            <label
+                                class="font-medium text-gray-700 block"
+                                for="identidade"
+                            >
+                                RG:
+                            </label>
+                            <input
+                                id="identidade"
+                                class="font-medium bg-slate-100 shadow-inner rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                placeholder="123456789"
+                                th:field="*{pessoaDTO.rg}"
+                                type="text"
+                            />
+                            <div
+                                th:replace="~{fragments :: listaErros('pessoaDTO.rg')}"
+                            ></div>
                         </div>
                     </div>
-                </div>
+
+                    <div class="flex mb-4 -mx-2">
+                        <div class="w-1/2 px-2">
+                            <label
+                                class="font-medium text-gray-700 block"
+                                for="dataNascimento"
+                                >Data de Nascimento:</label
+                            >
+                            <input
+                                id="dataNascimento"
+                                class="font-medium bg-slate-100 shadow-inner rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                placeholder="01/01/1970"
+                                th:field="*{pessoaDTO.dataNascimento}"
+                                type="date"
+                            />
+                            <div
+                                th:replace="~{fragments :: listaErros('pessoaDTO.dataNascimento')}"
+                            ></div>
+                        </div>
+                        <div class="w-1/2 px-2">
+                            <label
+                                class="font-medium text-gray-700 block"
+                                for="genero"
+                                >Gênero:</label
+                            >
+                            <select
+                                id="genero"
+                                class="font-medium bg-slate-100 shadow-inner rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                th:field="*{pessoaDTO.idGenero}"
+                            >
+                                <option value="-1">
+                                    -- Selecione a opção --
+                                </option>
+                                <option
+                                    th:each="genero : ${generos}"
+                                    th:text="${genero.getDescricao()}"
+                                    th:value="${genero.ordinal()}"
+                                ></option>
+                            </select>
+                            <div
+                                th:replace="~{fragments :: listaErros('pessoaDTO.idGenero')}"
+                            ></div>
+                        </div>
+                    </div>
+
+                    <label class="font-medium text-gray-700 block" for="senha"
+                        >Senha:</label
+                    >
+                    <input
+                        id="senha"
+                        class="font-medium bg-slate-100 shadow-inner rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                        placeholder="********"
+                        th:field="*{senha}"
+                        type="password"
+                    />
+                    <div th:replace="~{fragments :: listaErros('senha')}"></div>
+
+                    <h2 class="text-gray-700 font-bold mt-5 mb-1">Contato</h2>
+                    <div class="flex mb-4 -mx-2">
+                        <div class="w-1/2 px-2">
+                            <label
+                                class="font-medium text-gray-700 block"
+                                for="celular"
+                                >Celular:</label
+                            >
+                            <input
+                                id="celular"
+                                class="font-medium bg-slate-100 shadow-inner rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                placeholder="(84) 9 1234-5678"
+                                th:field="*{pessoaDTO.celular}"
+                                type="tel"
+                            />
+                            <div
+                                th:replace="~{fragments :: listaErros('pessoaDTO.celular')}"
+                            ></div>
+                        </div>
+                        <div>
+                            <label
+                                class="font-medium text-gray-700 block"
+                                for="email"
+                                >E-mail:</label
+                            >
+                            <input
+                                id="email"
+                                class="font-medium bg-slate-100 shadow-inner rounded-md w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+                                placeholder="joao.silva@email.com"
+                                th:field="*{pessoaDTO.email}"
+                                type="email"
+                            />
+                            <div
+                                th:replace="~{fragments :: listaErros('pessoaDTO.email')}"
+                            ></div>
+                        </div>
+                    </div>
+
+                    <div class="flex justify-around">
+                        <a
+                            class="text-blue-400 underline font-semibold align-middle"
+                            href="/"
+                        >
+                            Voltar
+                        </a>
+
+                        <input
+                            type="submit"
+                            class="mb-4 bg-blue-400 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline self-end"
+                            value="Registrar"
+                        />
+                    </div>
+                </form>
             </div>
         </div>
-    </div>
-</section>
-</body>
+    </body>
 </html>
